# tabularpytorchers

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  main.ipynb  play_with_pytorch.ipynb  pyproject.toml  pytorch-eda-with-gpu.ipynb  reg.py  requirements.txt
notebooks/: boston.ipynb  clf_demo.ipynb  reg_demo.ipynb
src/pytorchers/: __init__.py  base.py  clf.py  main.py  reg.py  viz.py
src/tabularpytorchers/: __init__.py  clf.py  main.py  viz.py
