[project]
name = "pytorchers"
version = "0.1.2"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "sfnsys710", email = "soufianenidam7@gmail.com" }
]
requires-python = ">=3.9.16"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.9.4",
    "numpy>=2.0.2",
    "pandas>=2.3.3",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "torch>=2.8.0",
]

[project.scripts]
pytorchers = "pytorchers:main"

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"
