[project]
name = "tabularpytorchers"
version = "0.1.4"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "sfnsys710", email = "soufianenidam7@gmail.com" }
]
requires-python = ">=3.9.16"
dependencies = [
    "matplotlib>=3.9.4",
    "numpy>=2.0.2",
    "pandas>=2.3.3",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "torch>=2.8.0",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
]
pre-commit = [
    "pre-commit>=4.3.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[project.scripts]
tabularpytorchers = "tabularpytorchers.main:main"

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"
